# mlir-instcombine

./: .clangd  CMakeLists.txt
instcombine/: CMakeLists.txt  old.cpp
pass/: CMakeLists.txt  Pass.cpp
tests/: CMakeLists.txt  output.mlir
